--- a/mat.css
+++ b/mat.css
@@ -14,3 +14,18 @@ div.record {
 a {
     margin-right: 50px;
 }
+
+div.result {
+    margin-top: 10px;
+    font-style: normal;
+    display: flex;
+    text-align: center;
+    color: rgb(11, 11, 219);
+}
+
+div.result2 {
+    font-style: normal;
+    display: flex;
+    text-align: center;
+    color: rgb(11, 11, 219);
+}
